--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-recieve.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serials-recieve.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Serials</title>
+<title>Koha &rsaquo; Serials &rsaquo; Check In subscription for <!-- TMPL_VAR name="bibliotitle" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script language="JavaScript" type="text/javascript">
 //<![CDATA[
@@ -45,13 +45,15 @@ function barcode_check(){
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="serials-search.inc" -->
 
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/serials/serials-home.pl">Serials</a> &rsaquo; Check In subscription for <i><!-- TMPL_VAR name="bibliotitle" --></i></div>
+
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
 
-<h1>Check In subscription for: <!-- TMPL_VAR name="bibliotitle" --></h1>
+<h1>Check In subscription for <i><!-- TMPL_VAR name="bibliotitle" --></i></h1>
 <div id="action">
     <a href="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" title="detail of the subscription">Subscription Details</a>
     <!-- <a href="/cgi-bin/koha/serials/serials-home.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->" class="button" title="all subscriptions on <!-- TMPL_VAR name="bibliotitle" -->">Search All Subscriptions</a> -->
