--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-renew.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/subscription-renew.tmpl
@@ -27,7 +27,7 @@
 		<p><label for="monthlength">Number of months</label><input type="text" id="monthlength" name="monthlength" value="<!-- TMPL_VAR name="monthlength" -->" /></p>
 		<p><label for="note">Note for the librarian that will manage your renewal request</label></p>
 		<p><textarea name="note" id="note" rows="10" cols="60"></textarea></p>
-		<input type="submit" value="Request a renewal" class="button serial" />
+		<input type="submit" value="Request a renewal" class="button" />
 </form>
 
 <!-- /TMPL_IF -->
