--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/acqui-search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/acqui-search.tmpl
@@ -22,8 +22,8 @@ function GetIt(aqbooksellerid,name)
 <h1>Search supplier for serial subscription</h1>
     <form action="/cgi-bin/koha/serials/acqui-search-result.pl" method="post">
         <label for="text">Supplier name : </label>
-        <input id="text" type="text"  size="25"   name="supplier" />
-        <input type="submit" class="button serial" value="OK" />
+        <input id="text" type="text"  size="25" name="supplier" />
+        <input type="submit" class="button" value="OK" />
     </form>
 
 </div>
