--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/checkexpiration.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/checkexpiration.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Serials Expiration</title>
+<title>Koha &rsaquo; Serials &rsaquo; Check Expiration</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="calendar.inc" -->
 <script type="text/javascript" language="JavaScript">
@@ -27,12 +27,13 @@
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="serials-search.inc" -->
 
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/serials/serials-home.pl">Serials</a> &rsaquo; Check Expiration </div>
+
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
-
 
 <h1>Check expiration</h1>
 
