--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/claims.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/claims.tmpl
@@ -1,6 +1,5 @@
-
-    <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-    <title>Koha &rsaquo; Subscription edit</title>
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
+    <title>Koha &rsaquo; Serials &rsaquo; Claims</title>
     <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
     <script type="text/javascript">
 <!-- TMPL_UNLESS NAME="preview" -->
@@ -26,7 +25,7 @@
     <!--TMPL_INCLUDE NAME="serials-search.inc" -->
 <!-- /TMPL_UNLESS -->
 
-
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/serials/serials-home.pl">Serials</a> &rsaquo; Claims</div>
 
 <!-- TMPL_UNLESS NAME="preview" -->
 
