--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/distributedto.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/distributedto.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Serials &rsaquo; Select Supplier</title>
+<title>Koha &rsaquo; Serials &rsaquo; Distribution Lists</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script language="javascript" type="text/javascript">
 //<![CDATA[
@@ -48,6 +48,8 @@
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="serials-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/serials/serials-home.pl">Serials</a> &rsaquo; Distribution Lists</div>
 
 <div id="doc3" class="yui-t2">
    
