--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/routing.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/routing.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Serials</title>
+<title>Koha &rsaquo; Serials &rsaquo; Edit Routing List</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script language="javascript" type="text/javascript">
 <!--
@@ -19,6 +19,8 @@ function search_member(subscriptionid){
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="serials-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/serials/serials-home.pl">Serials</a> &rsaquo; Edit Routing List </div>
 
 <div id="doc3" class="yui-t2">
    
