--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/viewalerts.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/viewalerts.tmpl
@@ -1,10 +1,12 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; View Alerts</title>
+<title>Koha &rsaquo; Serials &rsaquo; Alert subscribers for <!-- TMPL_VAR name="bibliotitle" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="serials-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/serials/serials-home.pl">Serials</a> &rsaquo; Alert subscribers for <i><!-- TMPL_VAR name="bibliotitle" --></i></div>
 
 <div id="doc3" class="yui-t2">
    
@@ -12,12 +14,12 @@
 	<div id="yui-main">
 	<div class="yui-b">
 
-<h1>Alert subscribers for <!-- TMPL_VAR name="bibliotitle" --></h1>
+<h1>Alert subscribers for <i><!-- TMPL_VAR name="bibliotitle" --></i></h1>
 		<a href="subscription-detail.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button">subscription</a>
 		<!-- TMPL_IF name="alertloop" -->
 			<table>
 			<tr>
-				<th>Borrower name</th>
+				<th>Patron name</th>
 				<th>&nbsp;</th>
 			</tr>
 
