--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/import.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/import.tmpl
@@ -4,13 +4,12 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-tools.inc" -->
-
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <h1>MARC acquisition system</h1>
 <h4>Import into the reservoir</h4>
@@ -64,7 +63,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="tools-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
