--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tmpl
@@ -232,7 +232,7 @@ function confirm_deletion(count) {
 </div>
 </div>
 <div class="yui-b">
-<!-- TMPL_INCLUDE NAME="cat-menu.inc" -->
+<!-- TMPL_INCLUDE NAME="labels-menu.inc" -->
 </div>
 </div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
