--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbooks.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbooks.tmpl
@@ -1,10 +1,17 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Cataloguing</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<script type="text/javascript">
+	$(document).ready(function() {
+	$('#header_search').tabs();
+ });
+</script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-catalogue.inc" -->
+<!-- TMPL_INCLUDE NAME="cataloging-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; Cataloguing</div>
 
 <div id="doc3" class="yui-t2">
    
@@ -12,28 +19,16 @@
 	<div id="yui-main">
 	<div class="yui-b">
 
-	<h1>Koha &rsaquo; Catalogue Maintenance</h1>
 	<!-- TMPL_IF name="noitemsfound" -->
 		No items found
 	<!-- /TMPL_IF -->
 	
-<h3>Search Existing Records</h3>
-<div id="addbooks_search">
-	<form name="search" action="addbooks.pl">
-		<p>
-        <label for="q">Search the catalog: </label>
-        <input id="q" type="text"  size="25" name="q" class="focus" />
-        <input type="submit" value="Search" />
-        </p>
-	</form>
-</div>
 <div id="addbooks_add_without_search">
 	<!-- TMPL_IF NAME="NOTMARC" -->
 		<form action="addbiblio.pl">
 			<input type="submit" value="Add Record Without Search" />
 		</form>
 	<!-- TMPL_ELSE -->
-		<br />
 		<form name="f" action="addbiblio.pl" method="post">
 		<h3>Create a Blank Bibliographic Record</h3>
 		<p>
@@ -56,7 +51,6 @@
 <!-- display the search results -->
 
 <!-- TMPL_IF NAME="total"-->
-<br />
 <!-- TMPL_VAR NAME="total"--> Results found in catalogue.
 <!-- TMPL_VAR name='pagination_bar'-->
 <div class="searchresults">
@@ -170,5 +164,4 @@
 </div>
 </div>
 </div>
-
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
