--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-create-layout.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-create-layout.tmpl
@@ -1,28 +1,30 @@
-<!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo;  Labels</title>
+<!-- TMPL_INCLUDE NAME="doc-head-open.inc" --><title>Koha &rsaquo;  Labels &rsaquo; Create Layout</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-labels.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/labels/label-home.pl">Labels</a> &rsaquo; Create Layout</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_INCLUDE NAME="label-status.inc" -->
 <form name="input" action="/cgi-bin/koha/labels/label-manager.pl" method="get">
 
-<h3>Layout Name</h3>
-<input type="textbox" name="layoutname"  size="20" value="<!-- TMPL_VAR NAME="layoutname" -->" />
+<p><label for="layoutname">Layout Name</label>
+<input type="textbox" name="layoutname" id="layoutname" size="20" value="<!-- TMPL_VAR NAME="layoutname" -->" /></p>
 
-<h3>Choose Order Of Fields to Print</h3>
+<p><label for="tx_title">Choose Order Of Fields to Print</label></p>
 
 <table summary="fields to print">
 <tr>
         <td>
-        <select name="tx_title">
+        <select name="tx_title" id="tx_title">
         <option value="0" selected="selected"></option>
         <option value="1">1</option>
         <option value="2">2</option>
@@ -213,18 +215,18 @@
   </tr>
 </table>
 
-<h3>Choose Barcode Type</h3>
-<select name="barcodetype">
+<p><label for="barcodetype">Choose Barcode Type</label>
+<select name="barcodetype" id="barcodetype">
     <!-- TMPL_LOOP NAME="barcode_types" -->
 	<!-- TMPL_IF NAME="active" --><option value="<!-- TMPL_VAR NAME="code" -->" selected="selected"><!-- TMPL_VAR NAME="desc" --></option>
 	<!-- TMPL_ELSE -->
         <option value="<!-- TMPL_VAR NAME="code" -->"><!-- TMPL_VAR NAME="desc" --></option>
 		<!-- /TMPL_IF -->
     <!-- /TMPL_LOOP -->
-</select>
+</select></p>
 
-<h3>Choose Layout Type</h3>
-<select name="printingtype">
+<p><label for="printingtype">Choose Layout Type</label>
+<select name="printingtype" id="printingtype">
     <!-- TMPL_LOOP NAME="printingtypes" -->
 	<!-- TMPL_IF NAME="active" -->
         <option value="<!-- TMPL_VAR NAME="code" -->" selected="selected"><!-- TMPL_VAR NAME="desc" --></option>
@@ -232,19 +234,20 @@
         <option value="<!-- TMPL_VAR NAME="code" -->"><!-- TMPL_VAR NAME="desc" --></option>
 	<!-- /TMPL_IF -->
     <!-- /TMPL_LOOP -->
-</select>
+</select></p>
+<p>
+<label for="name="startlabel">Start printing from Label number:<input type="textbox" name="startlabel" id="startlabel" size="2" value="1" /></label></p>
 
-<h3>Start printing from Label number:<input type="textbox" name="startlabel"  size="2" value="1" /></h3>
 
-
-<h3>Draw Guide Boxes<input type="checkbox" name="guidebox" value="1" /></h3>
-        <input type="submit" value="Submit" />
-		<input type="hidden" name="op" value="add_layout" />
+<p><label for="guidebox">Draw Guide Boxes<input type="checkbox" id="guidebox" name="guidebox" value="1" /></label></p>
+<p>		<input type="hidden" name="op" value="add_layout" />
+        <input type="submit" value="Submit" /></p>
 </form>
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="labels-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
