--- a/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/labels/label-home.tmpl
@@ -3,13 +3,15 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-labels.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; Labels</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_INCLUDE NAME="label-status.inc" -->
 
@@ -42,19 +44,18 @@
         <td>
                 <a href="/cgi-bin/koha/label-home.pl?op=delete_layout&layout_id=<!-- TMPL_VAR NAME="id"-->">Delete</a>
         </td>
-<td>
-<input type="radio" name="layout_id" value="<!-- TMPL_VAR NAME="id" -->"  
-                <!-- TMPL_IF NAME="active" -->
- checked
-                <!-- /TMPL_IF -->
- >
+<td> <!-- TMPL_IF NAME="active" -->
+<input type="radio" name="layout_id" value="<!-- TMPL_VAR NAME="id" -->" checked="checked" />
+<!-- TMPL_ELSE -->
+<input type="radio" name="layout_id" value="<!-- TMPL_VAR NAME="id" -->" />
+<!-- /TMPL_IF -->
         </td>
 </tr>
 
 <!-- /TMPL_LOOP -->
-<tr><td colspan="7" align="right">
-     <input type="submit" value="Set Active Layout">
-        <input type="hidden" name=op value="set_active_layout">
+<tr><td colspan="7">
+     <input type="submit" value="Set Active Layout" />
+        <input type="hidden" name=op value="set_active_layout" />
 </table>
 </form>
 <!-- /TMPL_IF -->
@@ -62,7 +63,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="labels-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
