--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/breeding.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/breeding.tmpl
@@ -1,17 +1,18 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Cataloging &rsaquo; MARC Import</title>
+<title>Koha &rsaquo; Tools &rsaquo; MARC Import</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
-<!-- TMPL_INCLUDE NAME="menu-tools.inc" -->
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/tools/tools-home.pl">Tools</a>  &rsaquo; Marc Import</i></div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <h1>MARC acquisition system</h1>
 <h4>Import into the reservoir</h4>
@@ -38,7 +39,7 @@
 	<tr>
 		<th scope="row"><label for="uploadmarc">Select the file to import: </label></th>
 		<td>
-			<input type="file" id="uploadmarc" name="uploadmarc" /><br />
+			<input type="file" id="uploadmarc" name="uploadmarc" />
 		</td>
 	</tr>
 	<tr>
@@ -65,7 +66,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="tools-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
