--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Patron Details for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></title>
+<title>Koha &rsaquo; Patrons &rsaquo; Patron Details for <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script type="text/javascript">
 function confirm_deletion() {
@@ -67,19 +67,10 @@ function confirm_reregistration() {
 	
     <div class="view">
 <ul>
-	<li>        <a href="/cgi-bin/koha/members/boraccount.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Account</a> </li>
 	<li>        <a href="/cgi-bin/koha/members/pay.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Pay fines</a> </li>
-	<li>        <a href="/cgi-bin/koha/members/readingrec.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->">Reading record</a></li>
 	<li>        <a href="javascript:confirm_reregistration();" onclick="document.form.value='y'" class="gest_borro_op">Renew</a></li>
 </ul>
     </div>
-        <!-- TMPL_IF NAME="CAN_user_parameters"-->
-    <div class="others">
-<ul>
-	<li>        <a href="/cgi-bin/koha/tools/viewlog.pl?do_it=1&amp;module=MEMBERS&amp;action=MODIFY&amp;object=<!-- TMPL_VAR NAME="borrowernumber"-->">Modification log</a></li>
-</ul>
-    </div>
-        <!-- /TMPL_IF -->
 </div>
 <!-- TMPL_IF NAME="flagged" -->
     <ul>
@@ -103,7 +94,7 @@ function confirm_reregistration() {
 <fieldset>
 <legend>Patron information</legend>
     <!-- TMPL_UNLESS NAME="I" -->
-    <p><label>Title:</label><!-- TMPL_VAR NAME="title" -->&nbsp;</p> 
+    <p><label>Title:</label><!-- TMPL_VAR NAME="title" --></p> 
     <p><label>First name:</label><!-- TMPL_VAR NAME="firstname" --></p>
     <!-- /TMPL_UNLESS -->
     <p><!-- TMPL_IF NAME="I" --><label>Organisation name: </label><!-- TMPL_ELSE --><label>Last name: </label><!-- /TMPL_IF --><!-- TMPL_VAR NAME="surname" --></p>
@@ -112,8 +103,8 @@ function confirm_reregistration() {
     <p><label>Date of birth:</label><!-- TMPL_VAR NAME="dateofbirth" --></p>
     <p><label>Sex:</label><!-- TMPL_VAR NAME="sex" --></p><!-- /TMPL_UNLESS -->
     <!-- TMPL_IF NAME="printethnicityline" -->
-    <p><label>Ethnicity:</label><!-- TMPL_VAR NAME="ethnicity" --> &nbsp;</p>
-    <p><label>Ethnicity notes: </label><!-- TMPL_VAR NAME="ethnotes" --> &nbsp;</p>
+    <p><label>Ethnicity:</label><!-- TMPL_VAR NAME="ethnicity" --></p>
+    <p><label>Ethnicity notes: </label><!-- TMPL_VAR NAME="ethnotes" --></p>
     <!-- /TMPL_IF -->
    <!-- TMPL_IF name="isguarantee" -->
             <!-- TMPL_IF NAME="guaranteeloop" -->
@@ -155,18 +146,18 @@ function confirm_reregistration() {
     <!-- /TMPL_IF -->
     </p>
     
-    <p><label>Registration branch:</label><!-- TMPL_VAR NAME="branchname" --> &nbsp;</p>
+    <p><label>Registration branch:</label><!-- TMPL_VAR NAME="branchname" --></p>
 
-    <p><label>Sort field 1: </label><!-- TMPL_VAR NAME="sort1" --> &nbsp;</p>
-    <p><label>Sort field 2:</label><!-- TMPL_VAR NAME="sort2" --> &nbsp;</p>
-    <p><label>OPAC login: </label><!-- TMPL_VAR name="userid" --> &nbsp;</p>
+    <p><label>Sort field 1: </label><!-- TMPL_VAR NAME="sort1" --></p>
+    <p><label>Sort field 2:</label><!-- TMPL_VAR NAME="sort2" --></p>
+    <p><label>OPAC login: </label><!-- TMPL_VAR name="userid" --></p>
     <!-- TMPL_IF NAME="password" -->
   <p><label>OPAC password: </label>*******</p>
    <!--TMPL_ELSE -->
-  <p><label>OPAC password: </label><span class="problem">Undefined &nbsp;</span></p> 
+  <p><label>OPAC password: </label><span class="problem"><a href="/cgi-bin/koha/members/member-password.pl?member=<!-- TMPL_VAR NAME="borrowernumber" -->">Undefined</a></span></p> 
    <!--/TMPL_IF --> 
-  <p><label>Circulation notes:</label><!-- TMPL_VAR name="borrowernotes" --> &nbsp;</p>
-    <p><label>Message to Patron:</label><!-- TMPL_VAR NAME="opacnote" --> &nbsp;</p>
+  <p><label>Circulation notes:</label><!-- TMPL_VAR name="borrowernotes" --></p>
+    <p><label>Message to Patron:</label><!-- TMPL_VAR NAME="opacnote" --></p>
             <a href="memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;step=3">Edit</a>
 </fieldset>
 <fieldset>
@@ -196,18 +187,18 @@ function confirm_reregistration() {
     <p><label>E-mail address:</label><a href="mailto:<!-- TMPL_VAR NAME="email" -->"><!-- TMPL_VAR NAME="email" --></a><!--TMPL_IF Name="emailpro"-->, <a href="mailto:<!-- TMPL_VAR NAME="emailpro" -->"><!-- TMPL_VAR NAME="emailpro" --></a><!--/TMPL_IF--></p>
     <!-- /TMPL_UNLESS -->
      <!-- TMPL_IF NAME="C" -->
-    <p><label>Name: </label><!-- TMPL_VAR NAME="contactname" --> &nbsp;</p>
-    <p><label>Firstname: </label><!-- TMPL_VAR NAME="firstname" --> &nbsp;</p>    
-    <p><label>Phone: </label><!-- TMPL_VAR NAME="phone" --> &nbsp;</p>
-    <p><label>Email: </label><!-- TMPL_VAR NAME="email" --> &nbsp;</p>
-    <p><label>Relationship: </label><!-- TMPL_VAR NAME="relationship" --> &nbsp;</p>
+    <p><label>Name: </label><!-- TMPL_VAR NAME="contactname" --></p>
+    <p><label>Firstname: </label><!-- TMPL_VAR NAME="firstname" --></p>    
+    <p><label>Phone: </label><!-- TMPL_VAR NAME="phone" --></p>
+    <p><label>Email: </label><!-- TMPL_VAR NAME="email" --></p>
+    <p><label>Relationship: </label><!-- TMPL_VAR NAME="relationship" --></p>
    <!-- /TMPL_IF -->
        
     <a href="memberentry.pl?op=modify&amp;borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->&amp;step=2">Edit</a>
 </fieldset>
 
 <fieldset>
-    <legend>Fines &amp; Charges</legend>
+    <legend>Fines and Charges</legend>
     <!-- TMPL_IF name="totaldue" -->
         <p>Total due: <!-- TMPL_VAR NAME="totaldue" --></p>
     <!-- TMPL_ELSE -->
@@ -265,23 +256,11 @@ function confirm_reregistration() {
                 <a href="/cgi-bin/koha/reserve/request.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->">Reserved</a>
             <!-- TMPL_ELSE -->
             <!-- TMPL_IF NAME="red" -->
-            <input type="checkbox"
-                    name="items[]"
-                    value="<!-- TMPL_VAR NAME="itemnumber" -->"
-                    checked="checked"
-                        />
+            <input type="checkbox" name="items[]" value="<!-- TMPL_VAR NAME="itemnumber" -->" checked="checked" />
             <!-- TMPL_ELSE -->
-            <input type="checkbox"
-                    name="items[]"
-                    value="<!-- TMPL_VAR NAME="itemnumber" -->"
-                        />
+            <input type="checkbox" name="items[]" value="<!-- TMPL_VAR NAME="itemnumber" -->" />
             <!-- /TMPL_IF -->
-            <input type="checkbox"
-                    name="all_items[]"
-                    value="<!-- TMPL_VAR NAME="itemnumber" -->"
-                checked="checked"
-                    style="display: none;"
-            />
+            <input type="checkbox" name="all_items[]" value="<!-- TMPL_VAR NAME="itemnumber" -->" checked="checked" style="display: none;" />
             <!-- /TMPL_IF -->
             </td>
             <td><a href="/cgi-bin/koha/circ/returns.pl?barcode=<!-- TMPL_VAR NAME="barcode" -->">Return</a></td>
